scss/core/_forms.scss
/* ... */
// Labels

// For use with horizontal and inline forms, when you need the label text to
// align with the form controls.
.form-control-label {
    padding-top: $input-padding-y;
    padding-bottom: $input-padding-y;
    margin-bottom: 0; // Override the `<label>` default
}
// Label sizes
@each $size, $dims in $component-sizes {
    $font-size:     map-get($dims, "font-size");
    $padding-y:     map-get($dims, "padding-y");

    .form-control-label-#{$size} {
        padding-top: $input-padding-y;
        padding-bottom: $input-padding-y;
        font-size:  $font-size;
    }
}

// Legends

// For use with horizontal and inline forms, when you need the legend text to
// be the same size as regular labels, and to align with the form controls.
.form-control-legend {
    padding: $input-padding-y $input-padding-x;
    margin-bottom: 0;
    font-size: $font-size-base;
}


// Todo: clear this up

// Special styles for iOS temporal inputs
//
// In Mobile Safari, setting `display: block` on temporal inputs causes the
// text within the input to become vertically misaligned. As a workaround, we
// set a pixel line-height that matches the given height of the input, but only
// for Safari. See https://bugs.webkit.org/show_bug.cgi?id=139848
//
// Note that as of 8.3, iOS doesn't support `week`.

_::-webkit-full-page-media, // Hack to make this CSS be Safari-only; see http://browserbu.gs/css-hacks/webkit-full-page-media/
input[type="date"],
input[type="time"],
input[type="datetime-local"],
input[type="month"] {
    &.form-control {
        line-height: $input-height;
    }

    @each $size, $dims in $component-sizes {
        $font-size:     map-get($dims, "font-size");
        $padding-y:     map-get($dims, "padding-y");

        &.form-control-#{$size},
        .input-group-#{$size} &.form-control {
            $input-height: (($font-size * $input-line-height) + ($padding-y * 2));
            line-height: $input-height;
        }
    }
}


// Static form control text
//
// Apply class to an element to make any string of text align with labels in a
// horizontal form layout.

.form-control-static {
    min-height: $input-height;
    // Size it appropriately next to real form controls
    padding-top: $input-padding-y;
    padding-bottom: $input-padding-y;
    // Remove default margin from `p`
    margin-bottom: 0;

    @each $size, $dims in $component-sizes {
        &.form-control-#{$size} {
            padding-right: 0;
            padding-left: 0;
        }
    }
}

// Form control sizing
//
// Build on `.form-control` with modifier classes to decrease or increase the
// height and font-size of form controls.
//
// The `.form-group-* form-control` variations are sadly duplicated to avoid the
// issue documented in https://github.com/twbs/bootstrap/issues/15074.
@each $size, $dims in $component-sizes {
    $font-size:     map-get($dims, "font-size");
    $padding-y:     map-get($dims, "padding-y");
    $padding-x:     map-get($dims, "padding-x");
    $border-radius: map-get($dims, "border-radius");

    .form-control-#{$size} {
        padding: $padding-y ($padding-x / 2);
        font-size: $font-size;
        @include border-radius($border-radius);

        // Color input - reduce horizontal padding otherwise visualy unsable in Chrome
        &[type="color"] {
            padding-top: ($input-padding-y / 2);
            padding-bottom: ($input-padding-y / 2);
        }
    }
}

// Form groups
//
// Designed to help with the organization and spacing of vertical forms. For
// horizontal forms, use the predefined grid classes.

.form-group {
    margin-bottom: $form-group-margin-bottom;
}

.form-text {
    display: block;
    margin-top: ($spacer * .25);
}


// Checkboxes and radios
//
// Indent the labels to position radios/checkboxes as hanging controls.
.form-check {
    position: relative;
    display: block;
    margin-bottom: ($spacer * .75);

    // Move up sibling radios or checkboxes for tighter spacing
    + .form-check {
        margin-top: -.25rem;
    }

    &.disabled {
        .form-check-label {
            color: $text-muted;
            cursor: $cursor-disabled;
        }
    }
}

.form-check-label {
    padding-left: 1.25rem;
    margin-bottom: 0; // Override default `<label>` bottom margin
    cursor: pointer;
}

.form-check-input {
    position: absolute;
    margin-top: .3125rem;
    margin-left: -1.25rem;
    vertical-align: baseline;

    &:only-child {
        position: static;
        vertical-align: top;
    }
}

// Radios and checkboxes on same line
.form-check-inline {
    position: relative;
    display: inline-block;
    padding-left: 1.25rem;
    margin-bottom: 0; // Override default `<label>` bottom margin
    vertical-align: middle;
    cursor: pointer;

    + .form-check-inline {
        margin-left: .75rem;
    }

    &.disabled {
        cursor: $cursor-disabled;
    }
}

// Form control feedback states
// Apply contextual and semantic states to individual form controls.
.form-control-feedback {
    margin-top: ($spacer * .25);
}

.form-control-success,
.form-control-warning,
.form-control-danger {
    padding-right: ($input-padding-x * 3);
    background-repeat: no-repeat;
    background-position: center right ($input-height / 4);
    background-size: ($input-height / 2) ($input-height / 2);
}

// Form validation states
@if map-has-key($context-themes, "success") {
    .has-success {
        //@include form-control-validation($state-success-color, $state-success-border-color);
        @include form-control-validation(map-deep-get($context-themes, "success", "context-color"), map-deep-get($context-themes, "success", "context-border"));

        .form-control-success {
            background-image: $icon-success;
        }
    }
}
/* ... */

